Add job reponse time (avg) API
